<resources>
    <string name="app_name">Nhà Tiện Nghi</string>
    <string name="setup_bot_name">Xin chào tôi là người giúp việc nhà bạn. Bạn muốn gọi tôi bằng tên gì?</string>
    <string name="setup_hint">(Tiếng việt có dấu)</string>
    <string name="setup_bot_name_listen">Nghe thử nhé</string>
    <string name="setup_bot_type">Và bạn muốn tôi đóng vai trò là...</string>
    <string name="setup_owner_name">xin cho tôi biết tên bạn</string>
    <string name="set_up_owner_role">Bạn muốn tôi gọi bạn là...</string>
    <string name="set_up_bot_role">Vậy tôi sẽ xưng là  ...</string>
    <string name="title_device_list">Danh sách thiết bị nhà anh</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_change_name">Bạn muốn đặt tên thiết bị này là</string>
    <string name="btn_yes">Đồng ý</string>
    <string name="btn_cancel">Hủy</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
</resources>
